# netrek-server

./: .gitignore  BUGS  CHANGES  ChangeLog  FAQ  INSTALL  INSTALL.cmake  Makefile.in  NEWS  PROJECTS  PROJECTS.checkpointing  README  README.OSX  README.md  README.releasing  TINYCORE  autogen.sh  config.h.cmake  configure.ac  doxygen.conf  ntpatch  patches  system.mk.in
Vanilla/: BUGS  CHANGES  CMakeLists.txt  ChangeLog  EXAMPLE  FAQ  INSTALL  INSTALL.INL  INSTALL.Newbie  INSTALL.RSA  KEYS  MIRRORS  Makefile.in  NEWS  PROJECTS  README  README.OSX  README.darcs  README.developers  README.releasing  REPOSITORIES  STYLE  aclocal.m4  autogen.sh  config.h.cmake  configure  configure.in  doxygen.conf  name.c  system.mk.in
Vanilla/bugs/: project.yaml
Vanilla/cvstools/: log.pl  loginfo
Vanilla/debian/: README.Debian  changelog  config  control  copyright  init  links  manpages  netrek-server-vanilla.init  netrekd.1  postinst  postrm  prerm  rules  templates
Vanilla/docs/: CMakeLists.txt  CREDITS  CUSTOMIZATION  CopyIfNotExists.cmake.in  CustomCopy.cmake  DEBUG.HELP  DEVNOTES.SHORT  DS  INSTALL.NOTES  Makefile.in  README  README.LTD  README.SHORT  README.ban  README.basep  README.inl-draft  README.keycomp  README.mars  README.motd  README.multiplexor  README.newbie  README.puck  README.scores  README.update  RSS  RSS-flow-diagram.dot  XSG.doc  ign.doc  logging.doc  metaservers-HowTo  multicast-server-discovery  ntserv.notes  players-file-redesign.txt  players.CHANGES_bronco_old  rates.gnuplot  sample_blosxom.conf  sample_features  sample_key.html  sample_metaservers  sample_motdclue  (+4 more)
Vanilla/gum/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  gum.xml  id.c  id.h  main.c  main.h  mkinstalldirs  signals.c  signals.h  support.c  test-id.c  xmalloc.c
Vanilla/include/: alarm.h  blog.h  config.h.in  conquer.h  copyright.h  daemon.h  data.h  defs.h  draft.h  gencmds.h  genspkt.h  ip.h  ltd_stats.h  packets.h  patchlevel.h  planets.h  proto.h  slotmaint.h  solicit.h  struct.h  sturgeon.h  sysdefaults.h  util.h  version.h  warnings.h
Vanilla/keycomp/: CMakeLists.txt  Makefile.in  README  rsa_key2cap.c  rsa_keycomp.c
Vanilla/motd/: README  convert.c  info.MASTER  makemotd  motd_basep_logo.MASTER  motd_clue_logo.MASTER  motd_list  motd_local.MASTER  motd_logo.MASTER
Vanilla/newstartd/: CMakeLists.txt  Makefile.in  newaccess.c  newstartd.c  subnet.c
Vanilla/ntserv/: CMakeLists.txt  Makefile.in  advertise.c  alarm.c  balance.c  bans.c  bay.c  blog.c  cluecheck.c  commands.c  conquer.c  coup.c  daemon.c  daemonII.c  data.c  db.c  death.c  detonate.c  distress.c  draft.c  enter.c  feature.c  features.c  findslot.c  gencmds.c  genspkt.c  getentry.c  getname.c  getpath.c  getship.c  glog.c  input.c  interface.c  ip.c  ltd_stats.c  main.c  ntscmds.c  openmem.c  orbit.c  phaser.c  (+24 more)
Vanilla/php/: archive.phtml  file.phtml  footer.inc  header.inc  index.phtml  players.phtml
Vanilla/pledit/: CMakeLists.txt  Makefile.in  edit.c  input.c  main.c  pledit.h
Vanilla/res-rsa/: INSTALL  LICENSE.US  Makefile.in  README  README.US  README.mkkey  config.h.in  configure  configure.in  mkkey.c  rsa.h  rsa_encode.c  rsa_encode_dummy.c  rsa_encode_gmp.c  rsa_gmp.c  rsa_gmp.h  rsa_math.c  rsa_math.h
Vanilla/robotd/: CMakeLists.txt  Makefile.in  assault.c  copyright.h  data.c  data.h  death.c  decide.c  defaults.c  defs.h  disengage.c  dmessage.c  dodge.c  engage.c  enter.c  escort.c  findslot.c  getarmies.c  getname.c  getship.c  input.c  main.c  master.c  newwin.c  ogg.c  packets.h  parse.c  ping.c  pwarfare.c  redraw.c  reserved.c  robot.c  robot.h  rwarfare.c  shmem.c  socket.c  struct.h  update_planets.c  update_players.c  util.c  (+1 more)
Vanilla/robots/: CMakeLists.txt  Makefile.in  auto-archive.pl  basep.c  basepdefs.h  commands.c.cmake  detonate.c  end_tourney.pl  inl.c  inlcmds.c  inlcomm.c  inldefs.h  mars.c  marsdefs.h  marsmove.c  newbie.c  newbiedefs.h  pret.c  pretdefs.h  puck.c  puckdefs.h  puckmove.c  rmove.c  roboshar.c  roboshar.h  robotII.c
Vanilla/rpm/: cow.spec  cvs2rpm  netrek.functions  netrek.gnome  netrek.logrotate  netrek.spec  tar2rpm
Vanilla/scripts/: statsindex.py
Vanilla/sequencer/: CMakeLists.txt  Makefile.in  roboshar.c  sequencer.c
Vanilla/tests/: build  build-cmake  build-debian  build-debian-pbuilder  conquer  genocide  inl-draft  newbie-robots-war-declarations  orbit-entry  parade  parade-bug-2006-08-07  redraw-bug-2007-03-14  ship-directions  torp-directions  torp-directions-wobble  torp-directions-wobble-2
Vanilla/tools/: CHANGES  CMakeLists.txt  Makefile.in  README.KEY  README.mergescores  ban.c  blog  blog-file  blog-purge-old  blog-refresh  blog-update  (+47 more)
keycomp/: CMakeLists.txt  Makefile.in
ntserv/: CMakeLists.txt  alarm.c  bans.c  bay.c  blog.c  commands.c  coup.c  daemon.c  data.c  db.c  death.c  distress.c  draft.c  enter.c  findslot.c  genspkt.c  getentry.c  getpath.c  getship.c  glog.c  input.c  interface.c  ip.c  ltd_stats.c  main.c  ntscmds.c  openmem.c  orbit.c  phaser.c  plasma.c  queue.c  redraw.c  reserved.c  rsa_key.c  salt.c  sigpipe.c  smessage.c  socket.c  solicit.c  startrobot.c  (+6 more)
robotd/: CMakeLists.txt  assault.c  copyright2.h  data.c  data.h  decide.c  defaults.c  defs.h  disengage.c  dmessage.c  dodge.c  engage.c  enter.c  escort.c  findslot.c  getarmies.c  getname.c  getship.c  input.c  main.c  master.c  newwin.c  ogg.c  packets.h  parse.c  ping.c  pwarfare.c  redraw.c  reserved.c  robot.c  robot.h  rwarfare.c  ships.c  shmem.c  sintab.c  socket.c  struct.h  update_planets.c  update_players.c  util.c  (+1 more)
robots/: CMakeLists.txt  auto-archive.pl  basep.c  detonate.c  end_tourney.pl  inl.c  inlcmds.c  mars.c  marsdefs.h  marsmove.c  newbie.c  newbiedefs.h  pret.c  pretdefs.h  puck.c  puckmove.c  puckmove.h  rmove.c  roboshar.c  roboshar.h  robotII.c
sequencer/: CMakeLists.txt  roboshar.c  sequencer.c
xsg/: CHANGES  CMakeLists.txt  Imakefile  Makefile.NBR  Manifest  Sample.xsgrc  defaults.c  input.c  localdata.c  localdata.h  main.c  oldbitmaps.h  option.c  playerlist.c  redraw.c  smessage.c  warning.c
(+152 files in other folders)
