dnl Process this file with autoconf to produce a configure script.

AC_INIT(main.c)


AM_INIT_AUTOMAKE(gum, 0.1)

AC_PROG_CC

AM_PATH_GTK(1.0.0,
            [LIBS="$LIBS $GTK_LIBS" CFLAGS="$CFLAGS $GTK_CFLAGS"],
            AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))

dnl Only use -Wall if we have gcc
if test "x$GCC" = "xyes"; then
  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CFLAGS="$CFLAGS -Wall"
  fi
fi

AC_OUTPUT(Makefile)
